@@ -3,10 +3,13 @@
 #######################################
 
 
-clean : 
+clean :
 	find . -name "*.pyc" -exec rm -rf {} \;
+	rm -rf build
 
-
+dist : clean
+	python setup.py sdist
+	rm MANIFEST
 
 
 
